removed map warnings